potential fix for extra white space on webpage

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,6 +2,7 @@ html {
   width: 100%;
   margin: 0px;
   padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
 }
 
 :root {
+  width: 100%;
   font-family: Neue Plak,-apple-system,BlinkMacSystemFont,Roboto,Helvetica Neue,Helvetica,Tahoma,Arial,sans-serif;
   font-weight: 700;
   font-size: 15px;
